--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-color: aquamarine;
         }
         #lovecalculator{
-            background-color: black;
+            background-color: red;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 8px blue;
@@ -56,6 +56,7 @@
         <button onclick="calculatelove()">calculate love</button>
         <div id="result"></div>
 
+        
     </div>
     <script>
         function calculatelove(){
